# msc

./: .gitignore  CMakeLists.txt  Makefile  README  interval.cpp
cmake/: Functions.cmake  Profile.cmake
cmd/: CMakeLists.txt
cmd/bulk_loader/: CMakeLists.txt  main.cpp
cmd/common/: CMakeLists.txt  common.hpp
cmd/fill_tree/: CMakeLists.txt  main.cpp
cmd/inspector/: CMakeLists.txt  tree_display.cpp  tree_display.hpp
cmd/prepare_trajectories/: CMakeLists.txt  geolife.cpp  geolife.hpp  main.cpp
code/: CMakeLists.txt
code/cmake/: Profile.cmake
code/cmd/: CMakeLists.txt
code/cmd/algorithm_examples/: CMakeLists.txt  main.cpp
code/cmd/bulk_loader/: main.cpp
code/cmd/common/: CMakeLists.txt  common.cpp  common.hpp
code/cmd/generator/: CMakeLists.txt  main.cpp
code/cmd/geolife_generator/: CMakeLists.txt  geolife.cpp  geolife.hpp  main.cpp
code/cmd/hilbert_curve/: CMakeLists.txt  main.cpp
code/cmd/hilbert_leaves/: CMakeLists.txt  main.cpp
code/cmd/hilbert_viz/: CMakeLists.txt  main.cpp
code/cmd/id_shuffle/: CMakeLists.txt  main.cpp
code/cmd/inspector/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.ui  scene_renderer.hpp  tree_display.cpp  tree_display.hpp  tree_display.ui
code/cmd/irwi_examples/: CMakeLists.txt  main.cpp
code/cmd/loader/: CMakeLists.txt  main.cpp
code/cmd/osm_generator/: CMakeLists.txt  main.cpp
code/cmd/prepare_trajectories/: CMakeLists.txt  geolife.cpp  geolife.hpp  main.cpp
code/cmd/query/: CMakeLists.txt  main.cpp
code/cmd/stats/: CMakeLists.txt  main.cpp
code/cmd/strings/: CMakeLists.txt  main.cpp
code/doc/: CMakeLists.txt  Doxyfile.in  mainpage.dox  style.css
code/geodb/: CMakeLists.txt  algorithm.hpp  bloom_filter.cpp  bloom_filter.hpp  bounding_box.hpp  common.cpp  common.hpp  date_time.hpp  external_list.hpp  filesystem.hpp  hilbert.hpp  hybrid_buffer.hpp  hybrid_map.hpp  id_set.hpp  interval.hpp  interval_set.hpp  klee.cpp  klee.hpp  main.cpp  null_set.hpp  parser.cpp  parser.hpp  rectangle.hpp  str.hpp  trajectory.cpp  trajectory.hpp  type_traits.hpp  vector.hpp
code/geodb/irwi/: base.cpp  base.hpp  block_collection.hpp  block_handle.hpp  bulk_load_common.hpp  bulk_load_hilbert.hpp  bulk_load_quickload.hpp  bulk_load_str.hpp  cursor.hpp  inverted_index.hpp  inverted_index_external.hpp  inverted_index_internal.hpp  label_count.hpp  posting.hpp  postings_list.hpp  postings_list_blocks.hpp  postings_list_external.hpp  postings_list_internal.hpp  query.hpp  string_map.hpp  string_map_bimap.hpp  string_map_external.hpp  string_map_internal.hpp  tree.hpp  tree_external.hpp  tree_insertion.hpp  tree_internal.hpp  tree_partition.hpp  tree_quickload.hpp  tree_state.hpp
code/geodb/utility/: as_const.hpp  external_sort.hpp  file_allocator.hpp  file_stream_iterator.hpp  function_utils.hpp  id_allocator.hpp  movable_adapter.hpp  noop.hpp  range_utils.hpp  raw_stream.hpp  shared_values.hpp  stats_guard.cpp  stats_guard.hpp  temp_dir.hpp  tuple_utils.hpp
code/test/: CMakeLists.txt  algorithm.cpp  bloom_filter.cpp  bounding_box.cpp  file_allocator.cpp  file_stream_iterator.cpp  hilbert.cpp  hybrid_buffer.cpp  hybrid_map.cpp  id_allocator.cpp  index_builder.cpp  interval_set.cpp  inverted_index.cpp  irwi.cpp  klee.cpp  main.cpp  movable_adapter.cpp  parser.cpp  point.cpp  postings_list.cpp  raw_stream.cpp  shared_values.cpp  stats_guard.cpp  string_map.cpp  trajectory.cpp  tree_internals.cpp
data/Geolife Trajectories 1.3/: README
data/osm/: README
geodb/: CMakeLists.txt  algorithm.hpp  bounding_box.hpp  common.hpp  date_time.hpp  external_list.hpp  filesystem.hpp  interval.hpp  interval_set.hpp  main.cpp  parser.cpp  parser.hpp  point.hpp  tpie_main.hpp  trajectory.cpp  trajectory.hpp  type_traits.hpp
geodb/irwi/: base.hpp  block_handle.hpp  bulk_load_common.hpp  bulk_load_quickload.hpp  bulk_load_str.hpp  cursor.hpp  inverted_index.hpp  inverted_index_external.hpp  inverted_index_internal.hpp  posting.hpp  postings_list.hpp  postings_list_external.hpp  postings_list_internal.hpp  query.hpp  str_loader.hpp  string_map.hpp  string_map_bimap.hpp  string_map_external.hpp  string_map_internal.hpp  tree.hpp  tree_external.hpp  tree_insertion.hpp  tree_internal.hpp  tree_partition.hpp  tree_state.hpp
geodb/utility/: as_const.hpp  external_sort.hpp  file_allocator.hpp  id_allocator.hpp  movable_adapter.hpp  range_utils.hpp  shared_values.hpp  temp_dir.hpp  tuple_utils.hpp
inspector/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  scene_renderer.hpp  tree_display.cpp  tree_display.hpp  tree_display.ui
results/: eval_cheap_quickload.txt  eval_memory_scaling.txt  eval_node_building.txt  eval_tree_building.txt  geolife.stats  osm.stats  quickload-geolife-16.txt  quickload-geolife-16m.txt  quickload-geolife-256.txt  quickload-geolife-256m.txt  quickload-osm-16.txt  quickload-osm-16m.txt  quickload-osm-256.txt  quickload-osm-256m.txt  random-walk.stats
scripts/: build_beta_trees.py  build_tree_variants.py  build_trees.py  commands.py  common.py  compile.py  datasets.py  drop_cache  eval_cheap_quickload.py  eval_fanout.py  eval_large_dataset.py  eval_memory_scaling.py  eval_node_building.py  eval_query.py  eval_tree_building.py  eval_tree_building_beta0.9.py  format.py  generate_datasets.py  hilbert_curve.py  hilbert_leaves.py  index_construction_graphics.py  irwi_example.py  irwi_small_tree.py  leaves.py  query_graphics-english.py  query_graphics.py  tree_construction_graphics.py  tree_stats.py
test/: CMakeLists.txt  algorithm.cpp  bounding_box.cpp  interval.cpp  interval_set.cpp  inverted_index.cpp  irwi.cpp  parser.cpp  postings_list.cpp  range_utils.cpp  tuple_utils.cpp
test/unit/: test_external_stack.cpp
tpie/: serialization_stream.cpp  serialization_stream.h  stack.h
tpie/blocks/: block_collection.h
tpie/btree/: external_store.h  external_store_base.cpp  external_store_base.h
tpie/file_accessor/: posix.h  posix.inl  win32.inl
