include_directories(${CMAKE_CURRENT_LIST_DIR})

add_subdirectory(common)

add_subdirectory(algorithm_examples)
add_subdirectory(generator)
add_subdirectory(hilbert_curve)
add_subdirectory(inspector)
add_subdirectory(loader)
add_subdirectory(osm_generator)
add_subdirectory(prepare_trajectories)
add_subdirectory(stats)

